--- a/css/style.css
+++ b/css/style.css
@@ -12,34 +12,36 @@
 
 /* navigation */
 
-    .nav {
-        padding: 0px 0 8px 0;
-    }
+.nav {
+  padding: 0px 0 8px 0;
+}
 
-    .nav ul {
-        text-align: center;
-        padding: 0;
-        max-width: 90%;
-        margin-right: auto;
-        margin-left: auto;
-    }
+.nav ul {
+  text-align: center;
+  max-width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+}
 
-    .nav li {
-        list-style-type: none;
-        display: inline-block;
-        padding-right: 60px;
-        padding-left: 60px;
-    }
+.nav li {
+  list-style-type: none;
+  display: inline-block;
+  padding-right: 60px;
+  padding-left: 60px;
+}
 
-    .nav a {
-      color: white;
-      font-size: 16px;
-    }
+.nav a {
+  color: white;
+  font-size: 16px;
+}
+
+#workExperience, #projects, #education, #mapDiv {
+  margin-top: 35px;
+}
 
 .education-entry, .work-entry, .project-entry {
   padding-left: 5%;
   padding-right: 5%;
-
 }
 
 h1 {
@@ -55,14 +57,12 @@ h2 {
   color: #999999;
   line-height: 29px;
   padding: 10px;
-
 }
 
 h3 {
   font-size: 20px;
   color: #999999;
   line-height: 22px;
-
 }
 
 h4 {
@@ -99,18 +99,24 @@ h2, h3, h4, h5 {
   line-height: 16px;
   float: right;
   padding-top: 7px;
+}
 
+.project-entry img {
+  width: 50%;
+  height: auto;
 }
 
 .onlineURL {
   margin-top: -14px;
   color: #1199C3;
   font-size: 16px;
+  font-weight: normal;
 }
 
 .online-entry {
   padding-left: 0;
 }
+
 p {
   font-size: 16px;
   color: #333333;
@@ -124,6 +130,7 @@ a {
   margin-top: 10px;
   display: block;
   font-size: 20px;
+  font-weight: bold;
 }
 
 a:hover {
@@ -154,6 +161,7 @@ a:hover {
 #skills li:last-of-type {
   margin-bottom: 30px;
 }
+
 .orange {
   background-color: #F5AE23;
 }
@@ -231,6 +239,14 @@ span {
 #letsConnect {
   text-align: center;
   margin-top: 4%;
+}
+
+button {
+  border-radius: 10%;
+  font-size: 10px;
+  padding: 8px;
+  float: right;
+  margin-top: 80px;
 }
 
 @media only screen and (max-width:900px) {
